--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>Don Forrest</title>
   </head>
   <body>
-    <h1>Hello Earth!</h1>
+    <nav class="navbar">
+      <div class="navbar_contents">
+        <div class="logo">
+          <a href="#">Don <span>Usbal.</span></a>
+        </div>
+        <ul class="menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <script src="src/script/particles.js"></script>
     <script src="src/script/app.js"></script>
   </body>
