Navbar and initialize hero & about section, styles, & particles.js

--- a/index.html
+++ b/index.html
@@ -4,23 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="src/styles/globals.css" />
-    <title>Don Forrest</title>
+    <title>Don Forrest Usbal</title>
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar_contents">
-        <div class="logo">
-          <a href="#">Don <span>Usbal.</span></a>
+        <div class="container">
+          <div class="logo">
+            <a href="#">Don <span>Usbal.</span></a>
+          </div>
+          <ul class="menu_links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+          <div class="menu_hamburger">
+            <i class="fas fa-bars"></i>
+          </div>
         </div>
-        <ul class="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
       </div>
     </nav>
+
+    <div id="particles-js"></div>
+    <section class="hero" id="hero">
+      <div class="container">
+        <div class="hero_contents">
+          <div class="title">Hi, I'm <span>Don Forrest</span></div>
+          <div class="subtitle">Web <span>Developer</span></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about">
+      <div class="container">
+        <div class="about_contents">
+          <h1>About Me</h1>
+
+          I am an 17-year-old from Philippines. I've started programming last
+          year and I love it since then.
+        </div>
+      </div>
+    </section>
 
     <script src="src/script/particles.js"></script>
     <script src="src/script/app.js"></script>
