About section and adjust styles

--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
         <div class="about_contents">
           <h1>About Me</h1>
 
-          I am an 17-year-old from Philippines. I've started programming last
-          year and I love it since then.
+          <p>
+            I am an 17-year-old from Philippines. I've started programming last
+            year and I love it since then.
+          </p>
+          <a href="#about">Read More</a>
         </div>
       </div>
     </section>
