Initialize skills section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="hero_contents">
           <div class="title">Hi, I'm <span>Don Forrest</span></div>
-          <div class="subtitle">Web <span>Developer</span></div>
+          <div class="subtitle">Software <span>Engineer</span></div>
         </div>
       </div>
     </section>
@@ -48,10 +48,89 @@
           <h1>About Me</h1>
 
           <p>
-            I am an 17-year-old from Philippines. I've started programming last
+            I am an 22-year-old from Philippines. I've started programming last
             year and I love it since then.
           </p>
           <a href="#about">Read More</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="skills">
+      <div class="container">
+        <div class="skills_contents">
+          <div class="skills_intro">
+            <h1>Some Technologies I Use</h1>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+              libero cupiditate veniam!
+            </p>
+          </div>
+
+          <div class="skills_flex">
+            <div class="skills_items">
+              <div class="title">
+                <h3>Frontend</h3>
+                <span></span>
+              </div>
+              <ul class="skills_list">
+                <li>
+                  <p>Javascript</p>
+                </li>
+                <li>
+                  <p>React Js</p>
+                </li>
+                <li>
+                  <p>Vue Js</p>
+                </li>
+              </ul>
+            </div>
+
+            <div class="skills_items">
+              <div class="title">
+                <h3>Backend</h3>
+                <span></span>
+              </div>
+              <ul class="skills_list">
+                <li>
+                  <p>Ruby on Rails</p>
+                </li>
+              </ul>
+            </div>
+
+            <div class="skills_items">
+              <div class="title">
+                <h3>Database</h3>
+                <span></span>
+              </div>
+              <ul class="skills_list">
+                <li>
+                  <p>PostgreSQL</p>
+                </li>
+                <li>
+                  <p>Firebase</p>
+                </li>
+              </ul>
+            </div>
+
+            <div class="skills_items">
+              <div class="title">
+                <h3>Technology</h3>
+                <span></span>
+              </div>
+              <ul class="skills_list">
+                <li>
+                  <p>Git</p>
+                </li>
+                <li>
+                  <p>Github</p>
+                </li>
+                <li>
+                  <p>Jira</p>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
