--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <a href="#">Don <span>Usbal.</span></a>
           </div>
           <ul class="menu_links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about" class="hover">About</a></li>
+            <li><a href="#projects" class="hover">Projects</a></li>
+            <li><a href="#contact" class="hover">Contact</a></li>
           </ul>
           <div class="menu_hamburger">
             <i class="fas fa-bars"></i>
@@ -75,13 +75,19 @@
               </div>
               <ul class="skills_list">
                 <li>
-                  <p>Javascript</p>
+                  <div>
+                    <p>Javascript</p>
+                  </div>
                 </li>
                 <li>
-                  <p>React Js</p>
+                  <div>
+                    <p>React Js</p>
+                  </div>
                 </li>
                 <li>
-                  <p>Vue Js</p>
+                  <div>
+                    <p>Vue Js</p>
+                  </div>
                 </li>
               </ul>
             </div>
@@ -93,7 +99,9 @@
               </div>
               <ul class="skills_list">
                 <li>
-                  <p>Ruby on Rails</p>
+                  <div>
+                    <p>Ruby on Rails</p>
+                  </div>
                 </li>
               </ul>
             </div>
@@ -105,10 +113,14 @@
               </div>
               <ul class="skills_list">
                 <li>
-                  <p>PostgreSQL</p>
+                  <div>
+                    <p>PostgreSQL</p>
+                  </div>
                 </li>
                 <li>
-                  <p>Firebase</p>
+                  <div>
+                    <p>Firebase</p>
+                  </div>
                 </li>
               </ul>
             </div>
@@ -120,13 +132,19 @@
               </div>
               <ul class="skills_list">
                 <li>
-                  <p>Git</p>
+                  <div>
+                    <p>Git</p>
+                  </div>
                 </li>
                 <li>
-                  <p>Github</p>
+                  <div>
+                    <p>Github</p>
+                  </div>
                 </li>
                 <li>
-                  <p>Jira</p>
+                  <div>
+                    <p>Jira</p>
+                  </div>
                 </li>
               </ul>
             </div>
