Initialize projects section

--- a/index.html
+++ b/index.html
@@ -153,6 +153,59 @@
       </div>
     </section>
 
+    <section class="projects">
+      <div class="container">
+        <div class="projects_heading">
+          <h1>My Projects</h1>
+        </div>
+      </div>
+
+      <div class="projects_wrapper">
+        <div class="project_item">
+          <a href="#" class="project-box">
+            <img
+              src="./src/images/netflix-clone.png"
+              alt="Netflix-clone website"
+            />
+          </a>
+          <div class="project_link">
+            <a href="#website"><i class="fas fa-eye"></i>Live demo</a>
+            <a href="#github"><i class="far fa-code"></i>Source code</a>
+          </div>
+        </div>
+
+        <div class="project_item">
+          <a href="#" class="project-box">
+            <img src="./src/images/house.png" alt="House-interior website" />
+          </a>
+          <div class="project_link">
+            <a href="#website"><i class="fas fa-eye"></i>Live demo</a>
+            <a href="#github"><i class="far fa-code"></i>Source code</a>
+          </div>
+        </div>
+
+        <div class="project_item">
+          <a href="#" class="project-box">
+            <img src="./src/images/easybank.png" alt="EasyBank website" />
+          </a>
+          <div class="project_link">
+            <a href="#website"><i class="fas fa-eye"></i>Live demo</a>
+            <a href="#github"><i class="far fa-code"></i>Source code</a>
+          </div>
+        </div>
+
+        <div class="project_item">
+          <a href="#" class="project-box">
+            <img src="./src/images/blackjack.png" alt="blackjack website" />
+          </a>
+          <div class="project_link">
+            <a href="#website"><i class="fas fa-eye"></i>Live demo</a>
+            <a href="#github"><i class="far fa-code"></i>Source code</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="src/script/particles.js"></script>
     <script src="src/script/app.js"></script>
   </body>
