Update About section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           <h1>About Me</h1>
 
           <p>
-            I am an 22-year-old from Philippines. I've started programming last
-            year and I love it since then.
+            I am a 21-year-old from Philippines.
+            I've been programming since I was 16 years old
+            and love it since then.
           </p>
           <a href="#about">Read More</a>
         </div>
